[package]
name = "rc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x25519-dalek = "1"
rand_core = { version = "0.5.1", features = ["getrandom"] }
hkdf = "0.12.3"
sha2 = "0.10.6"
hex-literal = "0.3.4"
hmac = "0.12.1"