[package]
name = "rrc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x25519-dalek = "1"
bytevec = "0.2.0"
rc = { path = "../rc" }
sha2 = "0.10.6"
hex-literal = "0.3.4"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "rrc_benchmark"
harness = false
