[package]
name = "rrc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x25519-dalek = "1"
rc = { path = "../rc" }
mset-mu-hash = { path = "../mset-mu-hash"}
hex-literal = "0.3.4"
rand = "0.8.5"
blake2 = "0.10.6"
digest = "0.9.0"
sha2 = "0.10.6"
bytevec = "0.2.0"
get-size = { version = "^0.1", features = ["derive"] }



[dev-dependencies]
criterion = "0.4.0"
bytevec = "0.2.0"

[[bench]]
name = "rrc_benchmark"
harness = false
