[package]
name = "s-rid-rc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rc = { path = "../rc" }
rrc = { path = "../rrc"}
mset-mu-hash = { path = "../mset-mu-hash"}
sha2 = "0.10.6"
bytevec = "0.2.0"
x25519-dalek = "1"

[dev-dependencies]
criterion = "0.4.0"

