[package]
name = "unf-arc-based-on-rc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rc = { path = "../rc" }
sha2 = "0.10.6"

[dev-dependencies]
rand = "0.8.5"
criterion = "0.4.0"

[[bench]]
name = "unf-arc-rc_benchmark"
harness = false