[package]
name = "unf-arc-based-on-rrc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rrc = { path = "../rrc"}
rc = { path = "../rc" }

[dev-dependencies]
rand = "0.8.5"
criterion = "0.4.0"

[[bench]]
name = "unf-arc-rrc_benchmark"
harness = false